# cpplang

./: Cargo.toml  README.md  functions.csv  types.csv
.githooks/: commit-msg  pre-commit  pre-push
.github/workflows/: release-linux-self-hosted.yml  release-linux.yml  release-windows.yml  test.yml
examples/: bubble_swap.txt  sort_3.cpp2
sample_project/cpp/: CMakeLists.txt
sample_project/src/: main.cpp2
src/: app.rs  evaluator.rs  lib.rs  main.rs  mapper.rs  parser.rs  tokenizer.rs  ž
src/evaluator/: cpptranspiler.rs  evaluator.rs  evaluatorLang.rs  interpreter.rs  mod.rs  to_cpp.rs
src/parser/: body.rs  for_.rs  function.rs  if_.rs  match_.rs  mod.rs  parser.rs  printer.rs  range.rs  struct_.rs  visitor.rs
tests/: cpptranspiler_test.rs  evaluator_test.rs  interpreter_test.rs  parser_test.rs  tokenizer_test.rs
